fix h4 before alignment

--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -185,7 +185,7 @@ section .picture-wrapper {
     display: flex;
     margin: 60px 100px;
     justify-content: center;
-    align-items: baseline;
+    align-items: flex-start;
 }
 
 .supercharge-workflow ul li {
@@ -198,7 +198,7 @@ section .picture-wrapper {
     display: block;
     width: 44px;
     height: 40px;
-    margin: 40px auto;
+    margin: 40px auto 25px auto;
     content: "";
 }
 
@@ -209,7 +209,7 @@ section .picture-wrapper {
     display: block;
     width: 36px;
     height: 32px;
-    margin: 40px auto;
+    margin: 40px auto 35px auto;
     content: "";
 }
 
